jeg er commited til dette